samples/_failures_safe/1761332315_97b12d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f01698fd.c: In function ‘main’:
./samples/SAFE/__tmp_f01698fd.c:151:24: error: missing terminating " character
  151 |                 printf("Result of A * B
      |                        ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f01698fd.c:151:17: error: expected expression at end of input
  151 |                 printf("Result of A * B
      |                 ^~~~~~
./samples/SAFE/__tmp_f01698fd.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f01698fd.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f01698fd.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f01698fd.c:151:17: error: expected declaration or statement at end of input
